Fix calculation